--- a/assets/css/bootstrap_rtl.css
+++ b/assets/css/bootstrap_rtl.css
@@ -2552,6 +2552,7 @@ output {
   width: 100%;
   height: 34px;
   padding: 6px 12px;
+  margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.42857143;
   color: #555;
