--- a/assets/css/modern-business.css
+++ b/assets/css/modern-business.css
@@ -33,6 +33,15 @@ body {
   text-decoration:none;
 }
 
+.breadcrumb {
+  margin-top: 20px;
+}
+
+.page-header {
+  margin: 25px 0 20px;
+}
+
+
 /* Home Page Carousel */
 
 header.carousel {
