--- a/assets/css/modern-business.css
+++ b/assets/css/modern-business.css
@@ -23,6 +23,14 @@ body {
     opacity: 0.8;
 }
 
+.img-thumbnail {
+  min-height: 238px;
+}
+
+.img-frontpage-thumbnail {
+  min-height: 182px !important;
+}
+
 .logo-text {
   font-size: 45px;
   text-decoration-style: double;
