--- a/assets/css/bootstrap_rtl.css
+++ b/assets/css/bootstrap_rtl.css
@@ -1129,7 +1129,7 @@ img {
   border-radius: 6px;
 }
 .img-thumbnail {
-  display: inline-block;
+  display: block;
   max-width: 350px;
   height: auto;
   padding: 4px;
@@ -4502,11 +4502,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     float: right !important;
   }
   .navbar-right {
-    float: left !important;
-    margin-right: -15px;
+    float: left;
+    margin-right: 30px;
   }
   .navbar-right ~ .navbar-right {
-    margin-right: 0;
+    margin-right: 0px;
   }
 }
 .navbar-default {
