--- a/assets/css/modern-business.css
+++ b/assets/css/modern-business.css
@@ -12,7 +12,7 @@ body {
 }
 
 body {
-    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    /*padding-top: 50px;*/ /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
 .img-portfolio {
@@ -32,13 +32,15 @@ body {
 }
 
 .logo-text {
-  font-size: 45px;
+  font-size: 35px;
   text-decoration-style: double;
+  margin-right: 40px;
 }
 
 .logo-text a {
   margin-top: 0px;
   text-decoration:none;
+  color: gold;
 }
 
 .breadcrumb {
@@ -46,8 +48,25 @@ body {
 }
 
 .page-header {
-  margin: 25px 0 20px;
+  margin: 5px 0 5px;
+  padding-right: 10px;
+  background-color: #f5f5f5;
+  text-align: center;
 }
+
+.nav-tabs {
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+
+.pagination {
+  margin: 10px 0;
+}
+
+.navbar-right {
+  float: right;
+}
+
 
 
 /* Home Page Carousel */
@@ -123,8 +142,10 @@ footer {
   width: 700px;
 }
 
-.search {
-  margin-top: 20px;
+.mysearch {
+  margin-top: 15px !important;
+  margin-right: 15px !important;
+  float: left !important;
 }
 
 code {
