--- a/assets/css/modern-business.css
+++ b/assets/css/modern-business.css
@@ -24,7 +24,7 @@ body {
 }
 
 .img-thumbnail {
-  min-height: 238px;
+  min-height: 240px;
 }
 
 .img-frontpage-thumbnail {
@@ -34,7 +34,11 @@ body {
 .logo-text {
   font-size: 35px;
   text-decoration-style: double;
-  margin-right: 40px;
+  margin-right: 10px;
+}
+
+.logo-img {
+  max-height: 60px !important;
 }
 
 .logo-text a {
