--- a/assets/css/bootstrap_rtl.css
+++ b/assets/css/bootstrap_rtl.css
@@ -1147,7 +1147,7 @@ img {
   width: 100%;
   height: auto;
   padding: 4px;
-  line-height: 1.42857143;
+  /*line-height: 1.42857143;*/
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -1426,6 +1426,7 @@ a.bg-danger:focus {
 .page-header {
   padding-bottom: 9px;
   margin: 10px 0 20px;
+  border-bottom: 1px solid #eee;
 }
 ul,
 ol {
