--- a/assets/css/modern-business.css
+++ b/assets/css/modern-business.css
@@ -51,12 +51,12 @@ body {
   margin-top: 20px;
 }
 
-.page-header {
+/*.page-header {
   margin: 5px 0 5px;
   padding-right: 10px;
   background-color: #f5f5f5;
   text-align: center;
-}
+}*/
 
 .nav-tabs {
   margin-top: 0px;
