--- a/assets/css/bootstrap_rtl.css
+++ b/assets/css/bootstrap_rtl.css
@@ -3495,6 +3495,7 @@ input[type="button"].btn-block {
 }
 .collapse.in {
   display: block;
+  margin-right: 20px;
 }
 tr.collapse.in {
   display: table-row;
