--- a/assets/css/modern-business.css
+++ b/assets/css/modern-business.css
@@ -63,6 +63,25 @@ body {
   margin-bottom: 10px;
 }
 
+.list-group{
+  margin-right: 28px;
+  width:250px;
+}
+
+.list-group.panel > .list-group-item {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.list-group-submenu {
+  margin-right:20px;
+}
+
+.well{
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
 .pagination {
   margin: 10px 0;
 }
